<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/underline_item_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForecastTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:backgroundTint="#28C3B6BE"
                android:background="@drawable/underline_item_layout"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:layout_margin="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginStart="8dp"
                        android:id="@+id/tvForecastState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="WEATHER"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgForecastItem"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvForecastTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:hint="555"
                        app:layout_constraintStart_toStartOf="@+id/tvForecastState"
                        app:layout_constraintTop_toBottomOf="@id/tvForecastState"/>


                    <TextView
                        android:id="@+id/textCelcius"
                        android:layout_width="13dp"
                        android:layout_height="12dp"
                        android:text="@string/c"
                        android:textSize="8sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="@+id/tvForecastTemp"
                        app:layout_constraintStart_toEndOf="@+id/tvForecastTemp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_margin="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textForecastHumidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="8dp"
                            android:text="@string/humidity" />

                        <ImageView
                            android:id="@+id/imgForecastHumidty"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_humidity" />

                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvForecastHumidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="0.0"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvPercent"
                                android:layout_width="7dp"
                                android:layout_height="9dp"
                                android:text="%"
                                android:textSize="8sp"
                                android:textStyle="bold"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textForecastPressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="8dp"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:id="@+id/imgForecastPressure"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_pressure"
                            android:layout_gravity="center" />

                        <TextView
                            android:id="@+id/tvForecastPressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:hint="888" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textForecastWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/wind"
                            android:textSize="8dp" />

                        <ImageView
                            android:id="@+id/imgForecastWind"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_wind"
                            android:layout_gravity="center" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvForecastWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="555" />

                            <TextView
                                android:id="@+id/textWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/km_h"
                                android:textStyle="bold"
                                android:textSize="8sp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/textForecastFeels"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feels"
                            android:textSize="8dp"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/imgForecastFeels"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_temperature"
                            android:layout_gravity="center" />
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvForecastFeelsTemp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="0.0" />

                            <TextView
                                android:id="@+id/texCelcius"
                                android:layout_width="16dp"
                                android:layout_height="10dp"
                                android:text="@string/c"
                                android:textSize="8sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textSunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textSize="8dp"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/imgSunrise"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_sunrise"
                            android:layout_gravity="center" />
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvSunrise"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="0.0" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textSize="8dp"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                        <ImageView
                            android:id="@+id/img_main"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_sunset"
                            android:layout_gravity="center" />
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tvSunset"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="0.0" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</androidx.cardview.widget.CardView>